--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Decks Store</title>
 </head>
-<body>
+<body class="bg-success">
     <header class="container">
         <div class="blog-header py-3 text-white bg-black text-center">
             <h1 class="display-4 fst-italic">Decks Store</h1>
@@ -15,6 +15,13 @@
     <main>
         <br>
         <h2 class="text-danger text-center">OFERTAS apenas HOJE, aqui na DECKS STORE !!!!!</h2>
+        <br>
+        <div class="text-center">
+            <h3>Mais Esperto que o Diabo</h3>
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51sD1X+4NmL._SX258_BO1,204,203,200_.jpg" alt="maisesperto">
+            <h3>R$ 45,00</h3>
+            <button type="button" class="btn btn-danger">Comprar</button>
+        </div>
     </main>
        
     </header>
