--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Decks Store</title>
 </head>
-<body class="bg-success">
+<body>
     <header class="container">
         <div class="blog-header py-3 text-white bg-black text-center">
             <h1 class="display-4 fst-italic">Decks Store</h1>
         </div>
     <main>
         <br>
-        <h2 class="text-danger text-center">OFERTAS apenas HOJE, aqui na DECKS STORE !!!!!</h2>
+        <h2 class="text-center ">OFERTAS apenas HOJE, aqui na DECKS STORE !!!!!</h2>
         <br>
         <div class="text-center">
             <h3>Mais Esperto que o Diabo</h3>
             <img src="https://images-na.ssl-images-amazon.com/images/I/51sD1X+4NmL._SX258_BO1,204,203,200_.jpg" alt="maisesperto">
             <h3>R$ 45,00</h3>
             <button type="button" class="btn btn-danger">Comprar</button>
+        </div>
+        <br><br><br>
+        <div class="text-center">
+            <h3>O Milagre da Manhã</h3>
+            <img src="https://m.media-amazon.com/images/I/515rjH7yikL.jpg" alt="O milagre da manhã">
+            <h3>R$ 21,00</h3>
+            <button type="button" class="btn btn-info">Comprar</button>
+
         </div>
     </main>
        
