--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </div>
     <main>
         <br>
-        <h2 class="text-center ">OFERTAS apenas HOJE, aqui na DECKS STORE !!!!!</h2>
+        <h2 class="text-center ">OFERTAS de HOJE, aqui na DECKS STORE !!!!!</h2>
         <br>
         <div class="text-center">
             <h3>Mais Esperto que o Diabo</h3>
-            <img src="https://images-na.ssl-images-amazon.com/images/I/51sD1X+4NmL._SX258_BO1,204,203,200_.jpg" alt="maisesperto">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51sD1X+4NmL._SX258_BO1,204,203,200_.jpg" alt="mais esperto que o diabo">
             <h3>R$ 45,00</h3>
             <button type="button" class="btn btn-danger">Comprar</button>
         </div>
@@ -29,6 +29,13 @@
             <h3>R$ 21,00</h3>
             <button type="button" class="btn btn-info">Comprar</button>
 
+        </div>
+        <br>
+        <div class = "text-center">
+            <h3>O Poder da Ação </h3>
+            <img src="https://m.media-amazon.com/images/P/B0108F7GT4.01._SCLZZZZZZZ_SX500_.jpg" alt="O Poder da Ação">
+            <h3>R$ 19,99</h3>
+            <button type="button" class="btn btn-warning">Comprar</button>
         </div>
     </main>
        
