Implementando os arquivos de JS

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             <button type="button" class="btn btn-warning">Comprar</button>
         </div>
     </main>
+    <div id="back-to-top" class="text-center">
+        <br>
+        <script src="index.js"></script>
+        <button type="button" class="btn btn-dark">Voltar ao Topo</button>
+    </div>
        
     </header>
 </body>
